stderr
ChristmasSongTest.java:15: error: method createVerseHeader in class ChristmasSong cannot be applied to given types;
        String actual = ChristmasSong.createVerseHeader();
                                     ^
  required: int
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error
